feat: add appsettings and program services

--- a/SchoolApp/appsettings.Development.json
+++ b/SchoolApp/appsettings.Development.json
@@ -1,8 +1,37 @@
-{
+﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database=Mvc8DbPro;User=Petros;Password={DB_PASS};MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:dd-MM-yyyy HH:mm:ss} {Level:u3}] {Message:lj} {NewLine} {Exception}",
+          "retainedFileCountLimit": 31,
+          "fileSizeLimitBytes": null
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithAspnetCore" ]
   }
 }
